Tweak sidebar width to avoid horizontal scrollbar on smaller devices.

--- a/Dash/Content/core.scss
+++ b/Dash/Content/core.scss
@@ -20,7 +20,7 @@ body {
     vertical-align: top;
     height: 100%;
     overflow: auto;
-    width: 2.8rem;
+    width: 3rem;
     font-size: $font-size;
 
     .nav-side {
@@ -64,7 +64,7 @@ body {
     display: inline-block;
     vertical-align: top;
     height: 100%;
-    width: calc(100% - 2.8rem);
+    width: calc(100% - 3rem);
     overflow: auto;
     border-left: 1px solid $primary-color;
     font-size: $font-size;
